# high-perf-server

./: Cargo.toml
src/: config.rs  main.rs  tls.rs
src/routes/: api.rs  metrics.rs  mod.rs  websocket.rs
static/: index.html
