[package]
name = "high_perf_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core web server stack
actix = "0.13"
actix-web = { version = "4", features = ["macros", "rustls-0_21"] }
actix-files = "0.6"
actix-web-actors = "4"
actix-cors = "0.7.1"
actix-web-prom = "0.7"

# TLS support
rustls = "0.21"
rustls-pemfile = "1.0"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Environment & utilities
dotenv = "0.15"
once_cell = "1.18"
num_cpus = "1.17.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Prometheus metrics
prometheus = "=0.13.4"
